[workspace]
members = [
    "libs/au"
]
resolver = "2"

[workspace.dependencies]
au = { path = "libs/au" }
automerge = { version = "0.5", default-features = false }
serde = { version = "1.0", default-features = false, features = ["rc"] }
smol_str = { version = "0.2", default-features = false }
time = {  version = "0.3", default-features = false }
thiserror = { version = "1.0", default-features = false }
