[workspace]
members = [
    "au",
    "aumock",
    "aui",
]
resolver = "2"

[workspace.dependencies]
au = { path = "au" }
aumock = { path = "aumock" }
automerge = { version = "0.5", default-features = false }
serde = { version = "1.0", default-features = false, features = ["rc"] }
smol_str = { version = "0.2", default-features = false }
time = {  version = "0.3", default-features = false }
thiserror = { version = "1.0", default-features = false }
crossterm = { version = "0.27", default-features = false }
ratatui = { version = "0.26", default-features = false }
sqids = { version = "0.4", default-features = false }
rand = { version = "0.8", default-features = false }
lipsum = { version = "0.9", default-features = false }
