[package]
name = "au"
version = "0.1.0"
edition = "2021"

[dependencies]
time = { workspace = true, default-features = false, features = ["std", "macros", "serde"] }
automerge = { workspace = true, default-features = false, features = [] }
serde = { workspace = true, default-features = false, features = ["std", "derive"] }
smol_str = { workspace = true, default-features = false }
thiserror = { workspace = true, default-features = false, features = [] }
